--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -37,18 +37,18 @@ main.cart-page {
           justify-content: center;
 }
 
+/*
 div.order-button > button {
-  border-color: #150605;
-  cursor: pointer;
-  padding: 15px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+    border-color: $black-color;
+    cursor: pointer;
+    padding: 15px;
+    transition: all .2s ease-in-out;
 }
 
 div.order-button > button:focus {
-  outline: none;
+    outline: none;
 }
-
+*/
 div.order-button > button:disabled {
   border-color: lightgray;
 }
@@ -153,5 +153,76 @@ a:hover {
 
 a:active {
   color: #EFFBFE;
+}
+
+/*Button*/
+.draw-border {
+  -webkit-box-shadow: inset 0 0 0 4px #150605;
+          box-shadow: inset 0 0 0 4px #150605;
+  color: #150605;
+  -webkit-transition: color 0.25s 0.08333s;
+  transition: color 0.25s 0.08333s;
+  position: relative;
+}
+
+.draw-border::before, .draw-border::after {
+  border: 0 solid transparent;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  content: '';
+  pointer-events: none;
+  position: absolute;
+  width: 0;
+  height: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.draw-border::before {
+  border-bottom-width: 4px;
+  border-left-width: 4px;
+}
+
+.draw-border::after {
+  border-top-width: 4px;
+  border-right-width: 4px;
+}
+
+.draw-border:hover {
+  color: #F47B6E;
+}
+
+.draw-border:hover::before, .draw-border:hover::after {
+  border-color: #F47B6E;
+  -webkit-transition: border-color 0s, width 0.25s, height 0.25s;
+  transition: border-color 0s, width 0.25s, height 0.25s;
+  width: 100%;
+  height: 100%;
+}
+
+.draw-border:hover::before {
+  -webkit-transition-delay: 0s, 0s, 0.25s;
+          transition-delay: 0s, 0s, 0.25s;
+}
+
+.draw-border:hover::after {
+  -webkit-transition-delay: 0s, 0.25s, 0s;
+          transition-delay: 0s, 0.25s, 0s;
+}
+
+.btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  line-height: 1.5;
+  font: "Oswald", sans-serif;
+  padding: 1.5em 3em;
+  letter-spacing: 0.05rem;
+  outline: none;
+  font-weight: 600;
+}
+
+.btn:focus {
+  outline: none;
 }
 /*# sourceMappingURL=style.css.map */
