--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -18,7 +18,6 @@ main.photos {
 
 main.cart-page {
   padding: 10px;
-  overflow: auto;
 }
 
 .cart-page > h1 {
@@ -37,6 +36,18 @@ main.cart-page {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+div.order-button > button {
+  border-color: #150605;
+  cursor: pointer;
+  padding: 15px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+div.order-button > button:focus {
+  outline: none;
 }
 
 div.order-button > button:disabled {
