--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -12,37 +12,58 @@ html, body {
     font-family: $basic-font-stack;
 }
 
-main.photos{
-    padding: 10px;
-    margin-bottom: 2.7em;
-    display: grid;
-    grid-gap: 2px;
-    grid-auto-rows: 100px;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-auto-flow: dense;
+main {
+    &.photos {
+        padding: 10px;
+        margin-bottom: 2.7em;
+        display: grid;  
+        grid-gap: 2px;
+        grid-auto-rows: 100px;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        grid-auto-flow: dense;
+    }
+
+    &.cart-page {
+        padding: 10px
+    }
 }
 
-main.cart-page {
-    padding: 10px;
-    overflow: auto;
+.cart-page {
+    & > h1 {
+        text-align: center; 
+    }
+    
+    .total-cost {
+        text-align: right; 
+		font-size: 1.3em;
+    }
+
+    div {
+        &.order-button {
+            display: flex;
+			justify-content: center;
+        }
+    }
 }
 
-.cart-page > h1 {
-    text-align: center;
-}
+div {
+    &.order-button {
+        & > button {
+            border-color: $black-color;
+            cursor: pointer;
+			padding: 15px;
+			transition: all .2s ease-in-out;
 
-.cart-page .total-cost {
-    text-align: right;
-    font-size: 1.3em;
-}
+            &:focus {
+                outline: none;
+            }
 
-.cart-page div.order-button {
-    display: flex;
-    justify-content: center;
-}
-
-div.order-button > button:disabled {
-    border-color: $disabled-color;
+            &:disabled {
+                border-color: lightgray;
+            }
+        }
+        
+    }
 }
 
 .cart-item {
@@ -50,17 +71,19 @@ div.order-button > button:disabled {
     justify-content: space-between;
     align-items: center;
     margin: 20px 0;
+
+    img {
+        margin-right: auto;
+		margin-left: 10px;
+    }
 }
 
-.cart-item img {
-    margin-right: auto;
-    margin-left: 10px;   
-}
-
-img.image-grid {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+img {
+    &.image-grid {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 .image-container {
@@ -132,11 +155,10 @@ header {
 
 a {
     text-decoration: none;
+    &:visited { color: $light-blue-color; }
+    &:hover { color: $light-blue-color; }
+    &:active { color: $light-blue-color; }
 }
-
-a:visited { color: $light-blue-color; }
-a:hover { color: $light-blue-color; }
-a:active { color: $light-blue-color; }
 
 .linked-in {
     color: $black-color;
@@ -154,7 +176,7 @@ footer {
 }
 
 /*Button*/
-//=== Drawing effect
+//Drawing effect
 
 @mixin btn-border-drawing($color: #ccc, $hover: black, $width: 2px, $vertical: top, $horizontal: left, $duration: 0.25s) {
     box-shadow: inset 0 0 0 $width $color;
@@ -210,7 +232,7 @@ footer {
     @include btn-border-drawing($black-color, $pink-color, 4px, bottom, right);
   }
   
-  //=== Button styling
+  //Button styling
   .btn {
     background: none;
     border: none;
